Fix the alignment of the icon in the fiverr logo maker button (#85887)

--- a/client/my-sites/site-settings/style.scss
+++ b/client/my-sites/site-settings/style.scss
@@ -342,6 +342,10 @@
 		margin-left: auto;
 		margin-top: 0;
 	}
+
+	svg {
+		margin-right: 6px;
+	}
 }
 
 .site-settings__site-title-tagline {
